Added basic responsivity and media queries to main grid

--- a/src/style/grid.scss
+++ b/src/style/grid.scss
@@ -10,27 +10,39 @@
   margin: 0 auto;
   width: 100%;
 }
-
 /*
  * CSS for the items inside of the grid
  */
 .grid-item {
   flex-grow: 0;
   flex-shrink: 1;
-  flex-basis: calc(33.33333% - 30px);
+  flex-basis: calc(33.33333% - 6rem);
   display: flex;
   flex-direction: column;
   font-size: medium;
   box-sizing: border-box;
   text-align: center;
-  margin: 10px 15px;
+  margin: 0 0.8rem;
+  margin-bottom: 1.5rem;
 
   img {
-    border-radius: 2%; border: 3px solid black;
     height: auto;
     width: 100%;
   }
+
   p {
-    margin: 20px 0;
+    font-weight: bold;
+    margin-top: 1rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .grid-item {
+    margin: 0.5rem 0.5rem;
+    flex-basis: calc(50% - 1rem);
+    p {
+      margin: 0;
+      margin-top: 0.9rem;
+    }
   }
 }
