--- a/client/style/grid.scss
+++ b/client/style/grid.scss
@@ -8,7 +8,7 @@
   flex-wrap: wrap;
   justify-content: center;
   margin: 0 auto;
-  width: 100%;
+  width: 80%;
 }
 /*
  * CSS for the items inside of the grid
@@ -16,13 +16,13 @@
 .grid-item {
   flex-grow: 0;
   flex-shrink: 1;
-  flex-basis: calc(33.33333% - 6rem);
+  flex-basis: calc(33.33333% - 1.6rem);
   display: flex;
   flex-direction: column;
   font-size: medium;
   box-sizing: border-box;
   text-align: center;
-  margin: 0 0.8rem;
+  margin: 0 0.8vw;
   margin-bottom: 1.5rem;
 
   img {
