Changed proportions of widescreen grid

--- a/client/style/grid.scss
+++ b/client/style/grid.scss
@@ -8,7 +8,7 @@
   flex-wrap: wrap;
   justify-content: center;
   margin: 0 auto;
-  width: 80%;
+  width: 85%;
 }
 /*
  * CSS for the items inside of the grid
@@ -22,8 +22,8 @@
   font-size: medium;
   box-sizing: border-box;
   text-align: center;
-  margin: 0 0.8vw;
-  margin-bottom: 1.5rem;
+  margin: 0 0.8rem;
+  margin-bottom: 2.2rem;
 
   img {
     height: auto;
