Changed font to Heebo

--- a/client/style/_vars.scss
+++ b/client/style/_vars.scss
@@ -1,2 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-$font-face: 'Arimo', -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Roboto', Arial, sans-serif;
+// Heebo import
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&display=swap');
+$font-face: 'Heebo',  -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Roboto', Arial, sans-serif;
